slightly modified site design

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -22,6 +22,15 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
   <script src="{{ url_for('static', filename='script.js') }}"></script>
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 50%;
+    }
+    tr {
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
 
@@ -29,9 +38,31 @@
 
   <h2>{{ endpoint }}</h2>
 
-  <h2><a href="/packages">Get Packages</a></h2>
+  <h2><a href="/packages">Get All Packages</a></h2>
+  <h2><a href="/package/10">Get Single Packages</a></h2>
   <h2><a href="/reset">Reset</a></h2>
-  <h2><a href="/package/10">Get Packages</a></h2>
+
+  <center>
+    <table>
+      <tr>
+        <th>Command</th>
+        <th>Value (if nec)</th>
+        <th>Go</th>
+      </tr>
+      <tr>
+        <td>Get all packages</td>
+        <td>NA</td>
+        <td><h2><a href="/packages">Go</a></h2></td>
+      </tr>
+      <tr>
+        <td>Get single package</td>
+        <td><input type="number" id="getPackage" name="package"></td>
+        <td>
+            <button onclick='window.location ="/package/"+document.getElementById("getPackage").value' data-method="DELETE">Go</button>
+        </td>
+      </tr>
+    </table>
+  </center>
 
 
   <h2>Last 10 visits</h2>
