slight change to front end and main files

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,8 +97,11 @@
       <option value="update">update</option>
       <option value="rate">rate</option>
       <option value="delete">delete</option>
-    </select>
-    Id: <input type="number" name="id">
+    </select> <br>
+    Id: <input type="number" name="id"> <br>
+    Name: <input type="text" name="name"> <br>
+    URL: <input type="text" name="url"> <br>
+    Content: <input type="text" name="content"> <br>
     <input type="submit" name= "submit" value="Submit" />
   </form>
 
