front end stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   <h1>Private and Public Module Registry Handler</h1>
 
 <!--  <h2>{{ endpoint }}</h2>-->
-  <img src=”https://www.google.com/url?sa=i&url=https%3A%2F%2Fmarcom.purdue.edu%2Four-brand%2Flogo%2F&psig=AOvVaw0rPtQOgIWBA7MmlcjvQrsP&ust=1638978316293000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJjSmZWE0vQCFQAAAAAdAAAAABAI”>
+  <img src="PurdueNameLogo.png" alt="Purdue logo with name">
 
   <center>
     <table>
@@ -108,19 +108,19 @@
   <br>
   <form action="/start" method="post">
     <select name="requestType">
-      <option value="list">list</option>
-      <option value="upload">upload</option>
-      <option value="update">update</option>
-      <option value="rate">rate</option>
-      <option value="delete">delete</option>
-    </select>
-    Id: <input type="number" name="id">
-    Name: <input type="number" name="name">
-    Content: <input type="number" name="content">
-    Version: <input type="number" name="version">
-    URL: <input type="number" name="url">
-    JSProgram: <input type="number" name="jsprogram">
-    Offset: <input type="number" name="offset">
+      <option value="List">list</option>
+      <option value="Upload">upload</option>
+      <option value="Update">update</option>
+      <option value="Rate">rate</option>
+      <option value="Delete">delete</option>
+    </select> <br>
+    Id: <input type="number" name="id"> <br>
+    Name: <input type="number" name="name"> <br>
+    Content: <input type="number" name="content"> <br>
+    Version: <input type="number" name="version"> <br>
+    URL: <input type="number" name="url"> <br>
+    JSProgram: <input type="number" name="jsprogram"> <br>
+    Offset: <input type="number" name="offset"> <br>
     <input type="submit" name= "submit" value="Submit" />
   </form>
 
