changed image name

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   <h1>Private and Public Module Registry Handler</h1>
 
 <!--  <h2>{{ endpoint }}</h2>-->
-  <img src="PurdueNameLogo.png" alt="Purdue logo with name">
+  <img src="PurdueNameLogo.jpg" alt="Purdue logo with name">
 
   <center>
     <table>
