--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   <h1>Private and Public Module Registry Handler</h1>
 
 <!--  <h2>{{ endpoint }}</h2>-->
-  <img src="https://marcom.purdue.edu/app/uploads/2020/01/3_UniversityLogo_Stacked.png" alt="marcom.purdue.edu">
+  <img src="https://www.gannett-cdn.com/-mm-/98cb634b8c656698f2ab0c19eae7656b9e0d6104/c=67-0-2339-1282/local/-/media/Indianapolis/Indianapolis/2014/09/19/1411174919000-Purdue-logo.jpg?width=660&height=373&fit=crop&format=pjpg&auto=webp" alt="indystar.com"> <br>
 
   <center>
     <table>
@@ -128,10 +128,13 @@
   <br>
   <br>
 
-  <h2>Last 10 visits</h2>
-  {% for time in times %}
-    <p>{{ time }}</p>
-  {% endfor %}
+  <img src="https://marcom.purdue.edu/app/uploads/2020/01/2_UniversityLogo_Horizontal.png" alt="marcom.purdue.edu"> <br>
+
+
+<!--  <h2>Last 10 visits</h2>-->
+<!--  {% for time in times %}-->
+<!--    <p>{{ time }}</p>-->
+<!--  {% endfor %}-->
 
   <button id="sign-in" hidden=false>Sign In</button>
 
