front end testing + main changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,11 @@
   <h1>Private and Public Module Registry Handler</h1>
 
 <!--  <h2>{{ endpoint }}</h2>-->
-  <img src="https://www.gannett-cdn.com/-mm-/b90380d7a8f70b9eb33ecef39b3cf96e0d3752d6/c=102-265-844-684/local/-/media/2015/06/29/Indianapolis/Indianapolis/635711681144351643-PrestoLogo-PurdueTrain.jpg?width=660&height=373&fit=crop&format=pjpg&auto=webp" alt="jconline.com"> <br>
+  <img src="https://www.gannett-cdn.com/-mm-/b90380d7a8f70b9eb33ecef39b3cf96e0d3752d6/c=102-265-844-684/local/-/media/2015/06/29/Indianapolis/Indianapolis/635711681144351643-PrestoLogo-PurdueTrain.jpg?width=660&height=373&fit=crop&format=pjpg&auto=webp" alt="jconline.com">
+
+  <br>
+  <br>
+  <br>
 
   <center>
     <table>
