--- a/templates/index.html
+++ b/templates/index.html
@@ -112,11 +112,11 @@
   <br>
   <form action="/start" method="post">
     <select name="requestType">
-      <option value="List">list</option>
-      <option value="Upload">upload</option>
-      <option value="Update">update</option>
-      <option value="Rate">rate</option>
-      <option value="Delete">delete</option>
+      <option value="list">List</option>
+      <option value="upload">Upload</option>
+      <option value="update">Update</option>
+      <option value="rate">Rate</option>
+      <option value="delete">Delete</option>
     </select> <br>
     Id: <input type="number" name="id"> <br>
     Name: <input type="number" name="name"> <br>
