changed input type

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,11 +119,11 @@
       <option value="delete">Delete</option>
     </select> <br>
     Id: <input type="number" name="id"> <br>
-    Name: <input type="number" name="name"> <br>
-    Content: <input type="number" name="content"> <br>
-    Version: <input type="number" name="version"> <br>
-    URL: <input type="number" name="url"> <br>
-    JSProgram: <input type="number" name="jsprogram"> <br>
+    Name: <input type="text" name="name"> <br>
+    Content: <input type="text" name="content"> <br>
+    Version: <input type="text" name="version"> <br>
+    URL: <input type="text" name="url"> <br>
+    JSProgram: <input type="text" name="jsprogram"> <br>
     Offset: <input type="number" name="offset"> <br>
     <input type="submit" name= "submit" value="Submit" />
   </form>
