get package by name from front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         <td>Offset</td>
       </tr>
       <tr>
-        <td>Get single package by ID</td>
+        <td>Get single package by ID (works)</td>
         <td>List</td>
         <td>ID</td>
       </tr>
@@ -66,7 +66,7 @@
         <td>Name</td>
       </tr>
       <tr>
-        <td>Post package</td>
+        <td>Post package (does not work from front end)</td>
         <td>Upload</td>
         <td>Name, Content, Version, URL, JSProgram</td>
       </tr>
