get packages from front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         <td>ID</td>
       </tr>
       <tr>
-        <td>Get single package by Name</td>
+        <td>Get single package by Name (works)</td>
         <td>List</td>
         <td>Name</td>
       </tr>
