front end updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,12 @@
   <center>
     <table>
       <tr>
-        <th>Command</th>
+        <th>Command (status from front end)</th>
         <th>Request</th>
         <th>Input Value</th>
       </tr>
       <tr>
-        <td>Get all packages</td>
+        <td>Get all packages (???)</td>
         <td>List</td>
         <td>Offset</td>
       </tr>
@@ -71,17 +71,17 @@
         <td>Name, Content, Version, URL, JSProgram</td>
       </tr>
       <tr>
-        <td>Ingest package</td>
+        <td>Ingest package (does not work from front end)</td>
         <td>Upload</td>
         <td>Name, Version, URL, JSProgram</td>
       </tr>
       <tr>
-        <td>Update package</td>
+        <td>Update package (no logic for this)</td>
         <td>Update</td>
         <td>Name, Content, Version, URL, JSProgram</td>
       </tr>
       <tr>
-        <td>Delete single package</td>
+        <td>Delete single package (???)</td>
         <td>Delete</td>
         <td>ID</td>
       </tr>
@@ -91,12 +91,12 @@
         <td>Name</td>
       </tr>
       <tr>
-        <td>Rate package</td>
+        <td>Rate package (works)</td>
         <td>Rate</td>
         <td>ID</td>
       </tr>
       <tr>
-        <td>Reset (delete all packages)</td>
+        <td>Reset (delete all packages) (untested)</td>
         <td>Delete</td>
         <td>Blank</td>
       </tr>
