front end updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
         <td>ID</td>
       </tr>
       <tr>
-        <td>Delete all versions of package</td>
+        <td>Delete all versions of package (???)</td>
         <td>Delete</td>
         <td>Name</td>
       </tr>
