front end changes to pass tests

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
         <td>Name, Content, Version, URL, JSProgram</td>
       </tr>
       <tr>
-        <td>Delete single package (???)</td>
+        <td>Delete single package (works)</td>
         <td>Delete</td>
         <td>ID</td>
       </tr>
@@ -96,7 +96,7 @@
         <td>ID</td>
       </tr>
       <tr>
-        <td>Reset (delete all packages) (untested)</td>
+        <td>Reset (delete all packages) (works)</td>
         <td>Delete</td>
         <td>Blank</td>
       </tr>
@@ -118,7 +118,7 @@
       <option value="rate">Rate</option>
       <option value="delete">Delete</option>
     </select> <br>
-    Id: <input type="number" name="id"> <br>
+    <input type="number" id="id"><label for="id">Id</label> <br>
     Name: <input type="text" name="name"> <br>
     Content: <input type="text" name="content"> <br>
     Version: <input type="text" name="version"> <br>
