front end changes to pass tests

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,12 +119,12 @@
       <option value="delete">Delete</option>
     </select> <br>
     <label for="id">Id:</label><input type="number" id="id"> <br>
-    <label for="id">Name:</label><input type="text" id="name"> <br>
-    <label for="id">Content:</label><input type="text" id="content"> <br>
-    <label for="id">Version:</label><input type="text" id="version"> <br>
-    <label for="id">URL:</label><input type="text" id="url"> <br>
-    <label for="id">JSProgram:</label><input type="text" id="jsprogram"> <br>
-    <label for="id">Offset:</label><input type="number" id="offset"> <br>
+    <label for="name">Name:</label><input type="text" id="name"> <br>
+    <label for="content">Content:</label><input type="text" id="content"> <br>
+    <label for="version">Version:</label><input type="text" id="version"> <br>
+    <label for="url">URL:</label><input type="text" id="url"> <br>
+    <label for="jsprogram">JSProgram:</label><input type="text" id="jsprogram"> <br>
+    <label for="offset">Offset:</label><input type="number" id="offset"> <br>
     <input type="submit" name= "submit" value="Submit" />
   </form>
 
